--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style.css">
-    <title>Document</title>
+    <script src="./script.js" defer></script>
+    <title>Desenvolvimento Web</title>
 </head>
+
 <body>
 
     <div>
-        <h1>USP Code Lab Leste - Desenvolvimento Web</h1> 
+        <h1>USP Code Lab Leste - Desenvolvimento Web</h1>
         <h1>1º Semestre de 2024 (Início: 24/04/2024)</h1>
+    </div>
+
+    <div>
+        <h3>Sobre os encontros</h3>
+        <p>🗓 <b>Dias:</b> terça-feira e quarta-feira </p>
+        <p>⏰ <b>Horário:</b> 15h30</p>
+        <p>📍 <b>Local:</b> a ser definido (mas provavelmente será no prédio i1, vulgo Titanic)</p>
+        <hr>
     </div>
 
     <h2 class="azul">Calendário inicial</h2>
@@ -18,16 +29,23 @@
     <div class="semana">
         <h3>Semana 01</h3>
 
-        <span>22/04 - Introdução ao Front-End e HTML <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
-        <span>26/04 -  Mais elementos HTML <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
-        
+        <span>24/04 - Introdução ao Front-End e HTML <a href="" class="hidden">[aula]</a> <a
+                href="https://github.com/roddorneles/web-codelab/tree/master/1.%20front-introducao-front"
+                target="_blank">[exercícios]</a>
+        </span>
+        <span>24/04 - Mais elementos HTML <a href="" class="hidden">[aula]</a> <a
+                href="https://github.com/roddorneles/web-codelab/tree/master/2.%20front-mais-elementos-html"
+                target="_blank">[exercícios]</a>
+        </span>
+
         <div class="flex-row">
             <div class="mr-1">
                 <span><b>Conteúdo extra: </b></span>
             </div>
-            <div class="flex-column"> 
-                <span>Setup  <a href="#">[aula]</a></span>
-                <span>Introdução e Básico de Git <a href="#">[aula]</a></span>
+            <div class="flex-column">
+                <span>Setup e Introdução ao Git <a
+                        href="https://drive.google.com/drive/folders/1A428pt8HW8fGRQBWv3_9O0DOvVy6Dmqz?usp=sharing"
+                        target="_blank">[vídeos sugeridos]</a></span>
             </div>
         </div>
     </div>
@@ -35,25 +53,25 @@
     <div class="semana">
         <h3>Semana 02</h3>
 
-        <span>29/04 - Introdução ao CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
-        <span>03/05 - Mais propriedades CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>30/04 - Introdução ao CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>01/05 - Mais propriedades CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
     </div>
 
     <div class="semana">
         <h3>Semana 03</h3>
 
-        <span>06/05 - Layouts <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
-        <span>10/05 - Layouts </span>
-    </div>    
-    
+        <span>07/05 - Layouts <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>08/05 - Layouts </span>
+    </div>
+
     <div class="semana">
         <h3>Semana 04</h3>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>13/05 -</span>
+                <span>17/05 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Organização e boas práticas com HTML e CSS <a href="#">[aula]</a> </span>
                 <span>Praticando layouts e flexbox <a href="#"></a> <a href="#">[exercícios]</a></span>
             </div>
@@ -61,13 +79,14 @@
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>17/05 -</span>
+                <span>18/05 -</span>
             </div>
-            <div class="flex-column"> 
-                <span>Variáveis e condicionais com Javascript <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+            <div class="flex-column">
+                <span>Variáveis e condicionais com Javascript <a href="#">[aula]</a> <a href="#">[exercícios]</a>
+                </span>
             </div>
         </div>
-    </div>    
+    </div>
 
     <div class="semana">
         <h3>Semana 05</h3>
@@ -76,7 +95,7 @@
             <div class="mr-1">
                 <span>20/05 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Inputs e botões <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -85,11 +104,11 @@
             <div class="mr-1">
                 <span>24/05 -</span>
             </div>
-            <div class="flex-column"> 
-                <span>Arrays e laços  <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+            <div class="flex-column">
+                <span>Arrays e laços <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
-    </div>    
+    </div>
 
     <div class="semana">
         <h3>Semana 06</h3>
@@ -98,7 +117,7 @@
             <div class="mr-1">
                 <span>27/05 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Início do projeto de Front <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -107,20 +126,20 @@
             <div class="mr-1">
                 <span>31/05 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Objetos e funções <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
-    </div>    
+    </div>
 
-    <div class="semana" >
+    <div class="semana">
         <h3>Semana 07</h3>
 
         <div class="flex-row">
             <div class="mr-1">
                 <span>03/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Projeto de Front <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -129,11 +148,11 @@
             <div class="mr-1">
                 <span>07/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Métodos de strings e arrays <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
-    </div>    
+    </div>
 
     <div class="semana">
         <h3>Semana 08</h3>
@@ -142,7 +161,7 @@
             <div class="mr-1">
                 <span>10/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Callbacks <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -151,11 +170,11 @@
             <div class="mr-1">
                 <span>14/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Sort e outros métodos <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
-    </div>    
+    </div>
 
     <div class="semana">
         <h3>Semana 09</h3>
@@ -164,7 +183,7 @@
             <div class="mr-1">
                 <span>17/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>DOM <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -173,11 +192,11 @@
             <div class="mr-1">
                 <span>21/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Como funciona a internet → <a href="#">[Vídeo sugerido]</a> (não haverá encontro) </span>
             </div>
         </div>
-    </div>    
+    </div>
 
     <div class="semana">
         <h3>Semana 10</h3>
@@ -186,7 +205,7 @@
             <div class="mr-1">
                 <span>24/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Primeiro servidor <a href="#">[aula]</a> </span>
             </div>
         </div>
@@ -195,11 +214,12 @@
             <div class="mr-1">
                 <span>28/06 -</span>
             </div>
-            <div class="flex-column"> 
+            <div class="flex-column">
                 <span>Eventos <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
-    </div>    
+    </div>
 
 </body>
+
 </html>
