Corrige link para exercicios

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
 
     <h2 class="azul">Calendário inicial</h2>
 
-    <div class="semana">
+    <div class="semana">fe
         <h3>Semana 01</h3>
 
         <span>24/04 - Introdução ao Front-End e HTML <a href="" class="hidden">[aula]</a> <a
-                href="https://github.com/roddorneles/web-codelab/tree/master/1.%20front-introducao-front"
+                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/1.%20front-introducao-front"
                 target="_blank">[exercícios]</a>
         </span>
         <span>24/04 - Mais elementos HTML <a href="" class="hidden">[aula]</a> <a
-                href="https://github.com/roddorneles/web-codelab/tree/master/2.%20front-mais-elementos-html"
+                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/2.%20front-mais-elementos-html"
                 target="_blank">[exercícios]</a>
         </span>
 
