chore: remove logs

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h2 class="azul">Calendário inicial</h2>
 
-    <div class="semana">fe
+    <div class="semana">
         <h3>Semana 01</h3>
 
         <span>24/04 - Introdução ao Front-End e HTML <a href="" class="hidden">[aula]</a> <a
