Adiciona aula e desafio

--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
     <div class="semana">
         <h3>Semana 01</h3>
 
-        <span>24/04 - Introdução ao Front-End e HTML <a href="" class="hidden">[aula]</a>
+        <span>24/04 - Introdução ao Front-End e HTML
+            <a href="https://drive.google.com/file/d/1jXYQbx8kqIj61rapetNPkKdiwXTc_pL7/view?usp=drive_link"
+                target="_blank">
+                [aula]
+            </a>
             <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/1.%20front-introducao-front"
                 target="_blank">
                 [exercícios]
@@ -61,6 +65,22 @@
                         target="_blank">[vídeos sugeridos]</a></span>
             </div>
         </div>
+
+        <div class="flex-row">
+            <div class="mr-1">
+                <span><b>Desafio extra: </b></span>
+            </div>
+            <div class="flex-column">
+                <span>
+                    Criar HTML de uma landing page
+                    <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/desafios/sunnyside"
+                        target="_blank">
+                        [enunciado]
+                    </a>
+                </span>
+            </div>
+        </div>
+
     </div>
 
     <div class="semana">
