Adiciona exercicios e resolucoes da semana 02

--- a/index.html
+++ b/index.html
@@ -86,14 +86,20 @@
     <div class="semana">
         <h3>Semana 02</h3>
 
-        <span>30/04 - Introdução ao CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
-        <span>01/05 - Mais propriedades CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>30/04 - Introdução ao CSS <a href="#">[aula]</a> <a
+                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/3.%20front-introducao-css">[exercícios]</a>
+            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/3.%20front-introducao-css"
+                target="_blank">
+                [resoluções]
+            </a>
+
+        </span>
+        <span>01/05 - Feriado </span>
     </div>
 
     <div class="semana">
         <h3>Semana 03</h3>
-
-        <span>07/05 - Layouts <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>01/05 - Mais propriedades CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
         <span>08/05 - Layouts </span>
     </div>
 
