Adiciona exercicios da semana 03

--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@
 
     <div class="semana">
         <h3>Semana 03</h3>
-        <span>01/05 - Mais propriedades CSS <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+        <span>07/05 - Mais propriedades CSS <a href="#">[aula]</a> <a
+                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/4.%20front-mais-propriedades-css">[exercícios]</a>
+        </span>
         <span>08/05 - Layouts </span>
     </div>
 
@@ -108,7 +110,7 @@
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>17/05 -</span>
+                <span>14/05 -</span>
             </div>
             <div class="flex-column">
                 <span>Organização e boas práticas com HTML e CSS <a href="#">[aula]</a> </span>
@@ -118,7 +120,7 @@
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>18/05 -</span>
+                <span>15/05 -</span>
             </div>
             <div class="flex-column">
                 <span>Variáveis e condicionais com Javascript <a href="#">[aula]</a> <a href="#">[exercícios]</a>
