Adiciona resolucao exercicio 1 mais-propriedades-css

--- a/index.html
+++ b/index.html
@@ -101,8 +101,12 @@
         <h3>Semana 03</h3>
         <span>07/05 - Mais propriedades CSS <a href="#">[aula]</a> <a
                 href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/4.%20front-mais-propriedades-css">[exercícios]</a>
+            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/4.%20front-mais-propriedades-css/exercicio-01"
+                target="_blank">
+                [resolução exercicio-01]
+            </a>
         </span>
-        <span>08/05 - Layouts </span>
+        <span>08/05 - Semana de Estágio </span>
     </div>
 
     <div class="semana">
