--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
         <h3>Sobre os encontros</h3>
         <p>🗓 <b>Dias:</b> terça-feira e quarta-feira </p>
-        <p>⏰ <b>Horário:</b> 15h30</p>
+        <p>⏰ <b>Horário:</b> 16h00</p>
         <p>📍 <b>Local:</b> a ser definido (mas provavelmente será no prédio i1, vulgo Titanic)</p>
         <hr>
     </div>
@@ -86,8 +86,11 @@
     <div class="semana">
         <h3>Semana 02</h3>
 
-        <span>30/04 - Introdução ao CSS <a href="#">[aula]</a> <a
-                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/3.%20front-introducao-css">[exercícios]</a>
+        <span>30/04 - Introdução ao CSS <a
+                href="https://drive.google.com/file/d/1FapA7xLL9umCcrDP-Fb3GG0-7S2dyOx1/view?usp=drive_link"
+                target="_blank">[aula]</a>
+            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/3.%20front-introducao-css"
+                target="_blank">[exercícios]</a>
             <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/3.%20front-introducao-css"
                 target="_blank">
                 [resoluções]
@@ -99,8 +102,10 @@
 
     <div class="semana">
         <h3>Semana 03</h3>
-        <span>07/05 - Mais propriedades CSS <a href="#">[aula]</a> <a
-                href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/4.%20front-mais-propriedades-css">[exercícios]</a>
+        <span>07/05 - Mais propriedades CSS <a
+                href="https://drive.google.com/file/d/1W4P5tlRDkxvYlXXPrA-03wlTrYn-Ks0J/view?usp=drive_link">[aula]</a>
+            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/4.%20front-mais-propriedades-css"
+                target="_blank">[exercícios]</a>
             <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/4.%20front-mais-propriedades-css/exercicio-01"
                 target="_blank">
                 [resolução exercicio-01]
@@ -117,8 +122,10 @@
                 <span>14/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Organização e boas práticas com HTML e CSS <a href="#">[aula]</a> </span>
-                <span>Praticando layouts e flexbox <a href="#"></a> <a href="#">[exercícios]</a></span>
+                <span>Variáveis, condicionais, arrays e loops em Javascript <a
+                        href="https://drive.google.com/file/d/1C4WgxfI1-pQzKme1ADQD657CyC2JYc6A/view?usp=drive_link"
+                        target="_blank">[aula]</a>
+                </span>
             </div>
         </div>
 
@@ -127,7 +134,12 @@
                 <span>15/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Variáveis e condicionais com Javascript <a href="#">[aula]</a> <a href="#">[exercícios]</a>
+                <span>
+                    Prática de variáveis, condicionais, arrays e loops em Javascript. <a href="#"
+                        target="_blank">[exercícios]</a></span>
+                </span>
+                <span>
+                    Prática de propriedades em CSS. <a href="#" target="_blank">[exercícios]</a></span>
                 </span>
             </div>
         </div>
@@ -138,19 +150,23 @@
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>20/05 -</span>
+                <span>21/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Inputs e botões <a href="#">[aula]</a> </span>
+                <span>Layouts <a
+                        href="https://drive.google.com/file/d/1vzot_uB3MngvzQXJBcleiFl5QnhVTJZw/view?usp=drive_link"
+                        target="_blank">[aula]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>24/05 -</span>
+                <span>22/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Arrays e laços <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+                <span>Objetos, funções e métodos de strings e arrays em Javascript <a href="#"
+                        target="_blank">[aula]</a> <a href="#" target="_blank">[exercícios]</a>
+                </span>
             </div>
         </div>
     </div>
@@ -160,19 +176,21 @@
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>27/05 -</span>
+                <span>28/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Início do projeto de Front <a href="#">[aula]</a> </span>
+                <span>Callbacks, sort e outros métodos <a href="#" target="_blank">[aula]</a> <a href="#"
+                        target="_blank">[exercícios]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>31/05 -</span>
+                <span>29/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Objetos e funções <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+                <span>Organização e boas práticas<a href="#" target="_blank">[aula]</a> </span>
+                <span>Prática com flexbox</span>
             </div>
         </div>
     </div>
@@ -185,16 +203,17 @@
                 <span>03/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Projeto de Front <a href="#">[aula]</a> </span>
+                <span> Inputs e botões <a href="#" target="_blank">[aula]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>07/06 -</span>
+                <span>04/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Métodos de strings e arrays <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+                <span> Dinâmicas e práticas <a href="#" target="_blank">[aula]</a> <a href="#"
+                        target="_blank">[exercícios]</a> </span>
             </div>
         </div>
     </div>
@@ -207,16 +226,18 @@
                 <span>10/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Callbacks <a href="#">[aula]</a> </span>
+                <span> DOM <a href="#">[aula]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>14/06 -</span>
+                <span>11/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Sort e outros métodos <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+                <span>Como funciona a internet <a href="#">[Vídeo sugerido]</a> <a href="#">[aula]</a> <a
+                        href="#">[exercícios]</a> </span>
+                <span>Primeiro servidor</span>
             </div>
         </div>
     </div>
@@ -229,16 +250,16 @@
                 <span>17/06 -</span>
             </div>
             <div class="flex-column">
-                <span>DOM <a href="#">[aula]</a> </span>
+                <span>Eventos <a href="#">[aula]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>21/06 -</span>
+                <span>18/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Como funciona a internet → <a href="#">[Vídeo sugerido]</a> (não haverá encontro) </span>
+                <span>API REST</span>
             </div>
         </div>
     </div>
@@ -251,16 +272,16 @@
                 <span>24/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Primeiro servidor <a href="#">[aula]</a> </span>
+                <span>??? <a href="#">[aula]</a> </span>
             </div>
         </div>
 
         <div class="flex-row">
             <div class="mr-1">
-                <span>28/06 -</span>
+                <span>25/06 -</span>
             </div>
             <div class="flex-column">
-                <span>Eventos <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
+                <span>??? <a href="#">[aula]</a> <a href="#">[exercícios]</a> </span>
             </div>
         </div>
     </div>
