Atualiza exercicios e resolucoes

--- a/index.html
+++ b/index.html
@@ -34,22 +34,18 @@
                 target="_blank">
                 [aula]
             </a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/1.%20front-introducao-front"
-                target="_blank">
+            <a href="hhttps://github.com/USPCodeLab-Leste/front-introducao-front/tree/master" target="_blank">
                 [exercícios]
             </a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/1.%20front-introducao-front"
-                target="_blank">
+            <a href="https://github.com/USPCodeLab-Leste/front-introducao-front/tree/resolucao" target="_blank">
                 [resoluções]
             </a>
         </span>
         <span>24/04 - Mais elementos HTML <a href="" class="hidden">[aula]</a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/2.%20front-mais-elementos-html"
-                target="_blank">
+            <a href="https://github.com/USPCodeLab-Leste/front-mais-elementos-html/tree/master" target="_blank">
                 [exercícios]
             </a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/2.%20front-mais-elementos-html"
-                target="_blank">
+            <a href="https://github.com/USPCodeLab-Leste/front-mais-elementos-html/tree/resolucao" target="_blank">
                 [resoluções]
             </a>
 
@@ -89,10 +85,9 @@
         <span>30/04 - Introdução ao CSS <a
                 href="https://drive.google.com/file/d/1FapA7xLL9umCcrDP-Fb3GG0-7S2dyOx1/view?usp=drive_link"
                 target="_blank">[aula]</a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/3.%20front-introducao-css"
+            <a href="https://github.com/USPCodeLab-Leste/front-introducao-css/tree/master"
                 target="_blank">[exercícios]</a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/3.%20front-introducao-css"
-                target="_blank">
+            <a href="https://github.com/USPCodeLab-Leste/front-introducao-css/tree/resolucao" target="_blank">
                 [resoluções]
             </a>
 
@@ -104,12 +99,8 @@
         <h3>Semana 03</h3>
         <span>07/05 - Mais propriedades CSS <a
                 href="https://drive.google.com/file/d/1W4P5tlRDkxvYlXXPrA-03wlTrYn-Ks0J/view?usp=drive_link">[aula]</a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/master/4.%20front-mais-propriedades-css"
+            <a href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/master"
                 target="_blank">[exercícios]</a>
-            <a href="https://github.com/USPCodeLab-Leste/web-codelab/tree/resolucao/4.%20front-mais-propriedades-css/exercicio-01"
-                target="_blank">
-                [resolução exercicio-01]
-            </a>
         </span>
         <span>08/05 - Semana de Estágio </span>
     </div>
@@ -135,11 +126,19 @@
             </div>
             <div class="flex-column">
                 <span>
-                    Prática de variáveis, condicionais, arrays e loops em Javascript. <a href="#"
+                    Prática de variáveis, condicionais em Javascript. <a
+                        href="https://github.com/USPCodeLab-Leste/back-condicionais-main/tree/master"
                         target="_blank">[exercícios]</a></span>
                 </span>
                 <span>
-                    Prática de propriedades em CSS. <a href="#" target="_blank">[exercícios]</a></span>
+                    Prática de arrays e loops em Javascript. <a
+                        href="https://github.com/USPCodeLab-Leste/back-arrays-e-loops-main"
+                        target="_blank">[exercícios]</a></span>
+                </span>
+                <span>
+                    Prática de propriedades em CSS. <a
+                        href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/master"
+                        target="_blank">[exercícios]</a> </span>
                 </span>
             </div>
         </div>
