--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <div class="flex-column">
                 <span>
-                    Prática de variáveis, condicionais em Javascript. <a
+                    Prática de variáveis e condicionais em Javascript. <a
                         href="https://github.com/USPCodeLab-Leste/back-condicionais-main/tree/master"
                         target="_blank">[exercícios]</a></span>
                 </span>
