Atualiza calendário com exercicios e resoluções de cada assunto

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 target="_blank">
                 [aula]
             </a>
-            <a href="hhttps://github.com/USPCodeLab-Leste/front-introducao-front/tree/master" target="_blank">
+            <a href="https://github.com/USPCodeLab-Leste/front-introducao-front/tree/master" target="_blank">
                 [exercícios]
             </a>
             <a href="https://github.com/USPCodeLab-Leste/front-introducao-front/tree/resolucao" target="_blank">
@@ -98,9 +98,13 @@
     <div class="semana">
         <h3>Semana 03</h3>
         <span>07/05 - Mais propriedades CSS <a
-                href="https://drive.google.com/file/d/1W4P5tlRDkxvYlXXPrA-03wlTrYn-Ks0J/view?usp=drive_link">[aula]</a>
+                href="https://drive.google.com/file/d/1W4P5tlRDkxvYlXXPrA-03wlTrYn-Ks0J/view?usp=drive_link"
+                target="_blank">[aula]</a>
             <a href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/master"
                 target="_blank">[exercícios]</a>
+            <a href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/resolucao" target="_blank">
+                [resoluções]
+            </a>
         </span>
         <span>08/05 - Semana de Estágio </span>
     </div>
@@ -128,18 +132,27 @@
                 <span>
                     Prática de variáveis e condicionais em Javascript. <a
                         href="https://github.com/USPCodeLab-Leste/back-condicionais-main/tree/master"
-                        target="_blank">[exercícios]</a></span>
+                        target="_blank">[exercícios]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/back-condicionais-main/tree/resolucao"
+                        target="_blank">[resoluções]</a></span>
                 </span>
                 <span>
                     Prática de arrays e loops em Javascript. <a
                         href="https://github.com/USPCodeLab-Leste/back-arrays-e-loops-main"
-                        target="_blank">[exercícios]</a></span>
+                        target="_blank">[exercícios]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/back-arrays-e-loops-main/tree/resolucao"
+                        target="_blank">[resoluções]</a>
                 </span>
                 <span>
                     Prática de propriedades em CSS. <a
                         href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/master"
-                        target="_blank">[exercícios]</a> </span>
+                        target="_blank">[exercícios]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/front-mais-propriedades-css/tree/resolucao"
+                        target="_blank">
+                        [resoluções]
+                    </a>
                 </span>
+
             </div>
         </div>
     </div>
@@ -154,7 +167,14 @@
             <div class="flex-column">
                 <span>Layouts <a
                         href="https://drive.google.com/file/d/1vzot_uB3MngvzQXJBcleiFl5QnhVTJZw/view?usp=drive_link"
-                        target="_blank">[aula]</a> </span>
+                        target="_blank">[aula]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/front-pratica-flex-master"
+                        target="_blank">[exercícios]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/front-pratica-flex-master/tree/resolucao"
+                        target="_blank">
+                        [resoluções]
+                    </a>
+                </span>
             </div>
         </div>
 
@@ -163,8 +183,11 @@
                 <span>22/05 -</span>
             </div>
             <div class="flex-column">
-                <span>Objetos, funções e métodos de strings e arrays em Javascript <a href="#"
-                        target="_blank">[aula]</a> <a href="#" target="_blank">[exercícios]</a>
+                <span>Objetos e funções
+                    <a href="https://github.com/USPCodeLab-Leste/back-objetos-e-funcoes-main"
+                        target="_blank">[exercícios]</a>
+                    <a href="https://github.com/USPCodeLab-Leste/back-objetos-e-funcoes-main/tree/resolucao"
+                        target="_blank">[resoluções]</a>
                 </span>
             </div>
         </div>
